# gin-rummy-engine

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/skills/add-strategy/: SKILL.md
.claude/skills/measure-strength/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/sync-sim/: SKILL.md
.github/workflows/: pages.yml  rust.yml
benches/: decision.rs
examples/: arena.rs  play.rs  tune.rs
src/: action.rs  driver.rs  eaai.rs  heuristic.rs  lib.rs  mc.rs  sim.rs  strategy.rs  view.rs
tests/: driver.rs  proptest.proptest-regressions  proptest.rs  strength.rs  view.rs
web/: Cargo.toml  README.md  app.js  index.html  style.css
web/src/: lib.rs
